Final touches and update readme

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,10 +6,11 @@ runnable=true
 advanced_options=true
 dedicated_server=false
 custom_features=""
-export_filter="all_resources"
+export_filter="exclude"
+export_files=PackedStringArray("res://assets/Models/CharacterOld/Animation/idle.fbx", "res://assets/Models/CharacterOld/Animation/jump.fbx", "res://assets/Models/CharacterOld/Animation/run.fbx", "res://assets/Models/CharacterOld/Textures/3d_mc_male_variant.png", "res://assets/Models/CharacterOld/Textures/colormap.png", "res://assets/Models/CharacterOld/3d_baby_mc.glb", "res://assets/Models/CharacterOld/3d_mc.fbx", "res://resources/3d_mc_texture_material.tres", "res://Scenes/LvlSelectHub3D/3d_main_character.tscn", "res://Scenes/LvlSelectHub3D/world3d.tscn", "res://Scripts/LvlSelectHub3D/3d_main_character.gd")
 include_filter=""
 exclude_filter=""
-export_path="Build/untitled-adhd-game.html"
+export_path="Builds/untitled-adhd-game.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -49,13 +50,14 @@ threads/godot_pool_size=4
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
-export_filter="all_resources"
+export_filter="exclude"
+export_files=PackedStringArray("res://assets/Models/CharacterOld/Animation/idle.fbx", "res://assets/Models/CharacterOld/Animation/jump.fbx", "res://assets/Models/CharacterOld/Animation/run.fbx", "res://assets/Models/CharacterOld/Textures/3d_mc_male_variant.png", "res://assets/Models/CharacterOld/Textures/colormap.png", "res://assets/Models/CharacterOld/3d_baby_mc.glb", "res://assets/Models/CharacterOld/3d_mc.fbx", "res://Builds/untitled-adhd-game.apple-touch-icon.png", "res://Builds/untitled-adhd-game.icon.png", "res://Builds/untitled-adhd-game.png", "res://Scenes/LvlSelectHub3D/3d_main_character.tscn", "res://Scenes/LvlSelectHub3D/world3d.tscn", "res://Scripts/LvlSelectHub3D/3d_main_character.gd")
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="Builds/untitled-adhd-game-v0.0.3.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -68,7 +70,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
